external-crates/move/move-compiler/tests/move_2024/parser/ability_modifier_postfix_no_semi.move
address 0x42 {
module M {
    // Postfix ability declarations require semicolons.
    struct Foo {} has store
}
}
